<resources>
    <string name="app_name">GAD Android Fundamentals</string>

    <string name="orange_text_view">This is an orange TextView</string>
    <string name="green_text_view">This is an green TextView</string>
    <string name="blue_text_view">This is an blue TextView</string>
    <string name="blue_button">This is an blue Button</string>
    <string name="green_button">This is an green Button</string>

    <string name="scrollview_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In nibh mauris cursus mattis molestie a. Tellus at urna condimentum mattis pellentesque. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi. Orci phasellus egestas tellus rutrum tellus. Posuere ac ut consequat semper viverra nam. Amet commodo nulla facilisi nullam. Ac tortor dignissim convallis aenean et tortor at. Nunc mi ipsum faucibus vitae aliquet nec. Cursus vitae congue mauris rhoncus aenean vel elit.

Sed arcu non odio euismod. Elementum nibh tellus molestie nunc non blandit massa enim. Sagittis id consectetur purus ut faucibus pulvinar elementum integer. Neque ornare aenean euismod elementum. Nulla facilisi cras fermentum odio eu feugiat pretium nibh. Dolor purus non enim praesent elementum. Nisi lacus sed viverra tellus in hac. Nunc faucibus a pellentesque sit amet porttitor. Vitae congue eu consequat ac felis donec et odio pellentesque. Facilisis magna etiam tempor orci. Nam aliquam sem et tortor consequat id porta. Arcu non sodales neque sodales.

Laoreet suspendisse interdum consectetur libero id faucibus nisl. Venenatis urna cursus eget nunc scelerisque. Dolor sed viverra ipsum nunc aliquet bibendum enim facilisis. Elit eget gravida cum sociis natoque penatibus et magnis dis. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Mauris commodo quis imperdiet massa. Amet purus gravida quis blandit. Platea dictumst quisque sagittis purus sit amet volutpat consequat mauris. Commodo nulla facilisi nullam vehicula ipsum a arcu. Platea dictumst vestibulum rhoncus est. Eget dolor morbi non arcu risus quis. Dolor sed viverra ipsum nunc aliquet bibendum enim facilisis. Risus nec feugiat in fermentum posuere urna nec. Velit dignissim sodales ut eu sem. Eu sem integer vitae justo eget magna fermentum. Purus ut faucibus pulvinar elementum integer enim neque volutpat ac.

Vulputate mi sit amet mauris commodo. Facilisis magna etiam tempor orci eu lobortis elementum nibh. Aliquam faucibus purus in massa tempor nec feugiat nisl pretium. Diam sollicitudin tempor id eu nisl nunc. A erat nam at lectus urna duis convallis. In cursus turpis massa tincidunt. Accumsan sit amet nulla facilisi. Sed sed risus pretium quam vulputate dignissim suspendisse in. Sed odio morbi quis commodo odio. Et malesuada fames ac turpis egestas sed tempus urna et. Tincidunt dui ut ornare lectus sit amet est placerat. Enim eu turpis egestas pretium aenean pharetra magna ac. Est ultricies integer quis auctor elit sed. Sed viverra tellus in hac habitasse platea dictumst vestibulum. Leo urna molestie at elementum eu. In tellus integer feugiat scelerisque varius morbi enim nunc faucibus. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. Sed lectus vestibulum mattis ullamcorper. Ipsum dolor sit amet consectetur. Sagittis purus sit amet volutpat.

Fames ac turpis egestas sed. Proin sed libero enim sed faucibus. Cursus turpis massa tincidunt dui ut. Nisi vitae suscipit tellus mauris a diam. Adipiscing bibendum est ultricies integer quis auctor elit sed. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. Interdum velit euismod in pellentesque massa placerat duis ultricies lacus. Tortor aliquam nulla facilisi cras fermentum odio eu feugiat. Sed augue lacus viverra vitae congue eu consequat ac. Leo duis ut diam quam nulla porttitor massa id.

    </string>

    <string name="api_version_prompt">Choose Android version:</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="start_for_result">Start For Result</string>
    <string name="enter_your_name">Enter your name!</string>
    <string name="send_to_receiver">SEND to Receiver</string>
    <string name="waiting_for_message">Waiting for message…</string>
    <string name="label_send_to_receiver">Send the text provided in the input field to the receiver activity.</string>
    <string name="label_start_for_result">Send an hardcoded text and wait for the result from the receiver activity.</string>

    <string name="title_activity_receiver">Receiver</string>
    <string name="title_activity_sender">Sender</string>
    <string name="title_activity_recycler_view">RecyclerView</string>
    <string name="invalid_response_message">Invalid response message!</string>
    <string name="hint_response_message">Enter your response</string>
    <string name="title_respond">Respond</string>
    <string name="error_receiving_sender">Could not process sender name!</string>

    <string name="hello_sender">Hello, %1$s! </string>
    <string name="inner_click">Inner Click</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ionut Negru</string>
    <string name="nav_header_subtitle">ionut.negru87@gmail.com</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>

    <string name="change_fragment">change</string>
    <string name="add_fragment">add</string>
    <string name="menu_group_communicate">Communicate</string>
    <string name="title_activity_botom_nav">BotomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="check_permissions">Check all permissions</string>
    <string name="all_permissions_granted">All permissions are granted.</string>
    <string name="permission_available_camera">Camera Permission has been granted.</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="permission_available_location">Location Permission has been granted.</string>
    <string name="permission_location_rationale">Location permission is needed to identify user location.</string>
    <string name="permission_available_storage">Storage Permission has been granted.</string>
    <string name="permission_storage_rationale">Storage permission is needed to access external storage.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="check_camera_permission">Check Camera permission</string>
    <string name="check_location_permission">Check Location permission</string>
    <string name="check_storage_permission">Check Storage permission</string>
    <string name="title_activity_network">NetworkActivity</string>
</resources>
