<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_orange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/orange_text_view"
            android:background="@color/orange"
            android:textSize="24dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/green_text_view"
            android:background="@color/green"
            android:textSize="24sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_blu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/blue_text_view"
            android:background="@color/blue"
            android:textSize="24sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_row"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_row"
        android:gravity="center">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/blue_button"
            style="@style/BlueButton"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            tools:srcCompat="@drawable/color" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/green_button"
            style="@style/GreenButton"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/third_row"
        android:layout_below="@id/second_row"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="This is an EditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="This is a ne EditText"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourth_row"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    </LinearLayout>

</RelativeLayout>